--- a/.github/workflows/cpp-ci.yml
+++ b/.github/workflows/cpp-ci.yml
@@ -15,7 +15,9 @@ jobs:
 
     - name: Intall dependencies
       run: sudo apt-get update && sudo apt-get install -y cmake g++ make
-
+    - name: Clean build directory
+      run: rm -rf build
+      
     - name: Create build repository
       run: mkdir build
 
